--- a/ProcFile
+++ b/ProcFile
@@ -1,1 +1,2 @@
-web gunicorn server.server:app
+gunicorn -b :5000 --access-logfile - --error-logfile - server.server:app
+web: gunicorn server.server:app
